# School-Time-Learnings

./: README.md  scripts.py
PRACTICLE/: DB.PY
PRACTICLE/QUESTION 1/: 1.py  2.py  query.py  sample.txt
PRACTICLE/studentdb/: DB.PY  sakiladb.py
PYTHON/: Postman.lnk  classes.ipynb  factorial.py  kartikey.py  main.py  oop.py  pyramid.py
PYTHON/AUDIO/: main.py
PYTHON/UTKARSH/: utkarsh.ipynb
PYTHON/dsa/: arrays.py
PYTHON/mcq/: questions.ipynb
RAG/: .env  pyproject.toml  requirements.txt
RAG/data/vector_store_webpage/: chroma.sqlite3
RAG/dino/: index.html  style.css
RAG/notebook/: document.ipynb  pdf_loader.ipynb  web_loader.ipynb
code/AGENT/codeExecutionAgent/: agent.py
code/AGENT/google_search_agent/: agent.py
code/CharAI/be/: package-lock.json  package.json
code/CharAI/fe/: .env  package.json  pnpm-lock.yaml  tsconfig.app.json
code/FETCHIFY/: app.js  fetchify.js  package.json
code/ONtheGO/: README.md
code/WEBRTC/: index.html  main.js  style.css
code/gemini-cli/: index.html  styles.css
code/insta-downloader/: package-lock.json  package.json
code/ollama/: main.js  test.js
code/script/: script.py
code/sim_test/: index.html
code/sketch_aug23a/: sketch_aug23a.ino
code/test/: index.js  package-lock.json  package.json
dsa/: 2.py  blogagent.ipynb  question1.py
dsa/hackonomics.ai_reel/: 2026-02-03_16-29-02_UTC.json.xz  2026-02-03_16-29-02_UTC.txt
dsa/shwetabh.mode_reel/: 2026-02-03_12-11-18_UTC.json.xz  2026-02-03_12-11-18_UTC.txt
dsa/uncover.ai_reel/: 2026-02-02_03-40-08_UTC.json.xz  2026-02-02_03-40-08_UTC.txt
(+76 files in other folders)
